--- a/index.html
+++ b/index.html
@@ -8,7 +8,91 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header class="header">
+        <p>Javascript проекты</p>
+    </header>
+    <main>
+        <div class="container">
+            <div class="section-title">
+                <h2 class="title-project">Работа с DOM</h2>
+            </div>
+            <div class="section-card">
+                <a href="#" target="_blank" class="card-project">
+                    <div class="img-project-wrapper">
+                        <img class="img-card" src="img/cardproject/card-1.jpg" alt="card">
+                    </div>
+                    <div class="name-project-wrapper">
+                        <h3>Любое название</h3>
+                    </div>
+                </a>
+                <a href="#" target="_blank" class="card-project">
+                    <div class="img-project-wrapper">
+                        <img class="img-card" src="img/cardproject/card-1.jpg" alt="card">
+                    </div>
+                    <div class="name-project-wrapper">
+                        <h3>Test</h3>
+                    </div>
+                </a>
+                <a href="#" target="_blank" class="card-project">
+                    <div class="img-project-wrapper">
+                        <img class="img-card" src="img/cardproject/card-1.jpg" alt="card">
+                    </div>
+                    <div class="name-project-wrapper">
+                        <h3>Test</h3>
+                    </div>
+                </a>
+                <a href="#" target="_blank" class="card-project">
+                    <div class="img-project-wrapper">
+                        <img class="img-card" src="img/cardproject/card-1.jpg" alt="card">
+                    </div>
+                    <div class="name-project-wrapper">
+                        <h3>Test</h3>
+                    </div>
+                </a>
+                <a href="#" target="_blank" class="card-project">
+                    <div class="img-project-wrapper">
+                        <img class="img-card" src="img/cardproject/card-1.jpg" alt="card">
+                    </div>
+                    <div class="name-project-wrapper">
+                        <h3>Test</h3>
+                    </div>
+                </a>
+                <a href="#" target="_blank" class="card-project">
+                    <div class="img-project-wrapper">
+                        <img class="img-card" src="img/cardproject/card-1.jpg" alt="card">
+                    </div>
+                    <div class="name-project-wrapper">
+                        <h3>Test</h3>
+                    </div>
+                </a>
+                <a href="#" target="_blank" class="card-project">
+                    <div class="img-project-wrapper">
+                        <img class="img-card" src="img/cardproject/card-1.jpg" alt="card">
+                    </div>
+                    <div class="name-project-wrapper">
+                        <h3>Test</h3>
+                    </div>
+                </a>
+                <a href="#" target="_blank" class="card-project">
+                    <div class="img-project-wrapper">
+                        <img class="img-card" src="img/cardproject/card-1.jpg" alt="card">
+                    </div>
+                    <div class="name-project-wrapper">
+                        <h3>Test</h3>
+                    </div>
+                </a>
+                <a href="#" target="_blank" class="card-project">
+                    <div class="img-project-wrapper">
+                        <img class="img-card" src="img/cardproject/card-1.jpg" alt="card">
+                    </div>
+                    <div class="name-project-wrapper">
+                        <h3>Test</h3>
+                    </div>
+                </a>
+            </div>
+        </div>
+    </main>
+
     <script src="script.js"></script>
 </body>
 </html>
